# calc_crc16

./: README.md  pyproject.toml
calc_crc16/: main.py
utils/: operations.py
